# swf

./: .gitignore  Cargo.toml  LICENSE  README.md  README_RU.md
.cargo/: config.toml
src/: ascii.rs  cli.rs  conf.rs  formatter.rs  main.rs  weather.rs
