[package]
name = "swf"
version = "0.1.0"
edition = "2021"
description = "Console program to get current information about weather"
authors = ["Pelmen Zharenny"]
license = "MIT"
keywords = ["weather", "openweathermap"]
homepage = "https://t.me/svalka07"
repository = "https://github.com/mskrasnov/swf"

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
